修改网页超链接错误

--- a/src/main/webapp/courses_test.html
+++ b/src/main/webapp/courses_test.html
@@ -81,9 +81,9 @@
       <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
           <h6 class="collapse-header">考试管理:</h6>
-          <a class="collapse-item" href="examination-manage.html">考试安排管理</a>
-          <a class="collapse-item" href="examination-score.html">考试成绩管理</a>
-          <a class="collapse-item" href="examianation-appeal.html">学生申诉管理</a>
+          <a class="collapse-item" href="examination_manage.html">考试安排管理</a>
+          <a class="collapse-item" href="examination_score.html">考试成绩管理</a>
+          <a class="collapse-item" href="examianation_appeal.html">学生申诉管理</a>
         </div>
       </div>
     </li>
