--- a/src/main/webapp/examianation_appeal.html
+++ b/src/main/webapp/examianation_appeal.html
@@ -9,14 +9,17 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>SB Admin 2 - Charts</title>
+  <title>SB Admin 2 - Tables</title>
 
-  <!-- Custom fonts for this template-->
+  <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
-  <!-- Custom styles for this template-->
+  <!-- Custom styles for this template -->
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
+
+  <!-- Custom styles for this page -->
+  <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
 
 </head>
 
@@ -63,7 +66,7 @@
       <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
           <h6 class="collapse-header">用户管理:</h6>
-          <a class="collapse-item" href="adduser.html">新增用户</a>
+          <a class="collapse-item" href="adduser_test.html">新增用户</a>
           <a class="collapse-item" href="search_test.html">用户查询</a>
         </div>
       </div>
@@ -78,9 +81,9 @@
       <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
           <h6 class="collapse-header">考试管理:</h6>
-          <a class="collapse-item" href="examination_manage.html">考试安排管理</a>
-          <a class="collapse-item" href="examination_score.html">考试成绩管理</a>
-          <a class="collapse-item" href="examianation_appeal.html">学生申诉管理</a>
+         <a class="collapse-item" href="examination_manage.html">考试安排管理</a>
+         <a class="collapse-item" href="examination_score.html">考试成绩管理</a>
+         <a class="collapse-item" href="examianation_appeal.html">学生申诉管理</a>
         </div>
       </div>
     </li>
@@ -310,95 +313,87 @@
       <div class="container-fluid">
 
         <!-- Page Heading -->
-        <h1 class="h3 mb-2 text-gray-800">新增用户</h1>
-        <div class="row">
-          <div class="col-md-2">
-            <img src="img/doge.jpg" style="max-height: 90%;max-width: 90%">
-            <a href="#" >头像上传</a>
+        <h1 class="h3 mb-2 text-gray-800" style="padding-bottom: 80px">申诉管理</h1>
+        <!-- DataTales Example -->
+        <div class="card shadow mb-4">
+          <div class="card-header py-3">
+            <div class="row">
+              <h6 class="m-0 font-weight-bold text-primary col-md-10">申诉列表</h6>
+            </div>
           </div>
-          <div class="col-md-8">
-            <form id="user-info">
-              <div class="form-group">
-                <label for="name">姓名</label>
-                <input class="form-control" id="name" placeholder="姓名" name="Name">
-              </div>
-              <div class="form-group">
-                <label for="InputEmail1">邮箱</label>
-                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="邮箱" name="Email">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-              </div>
-              <div class="form-group">
-                <label for="uid">编号</label>
-                <input class="form-control" id="uid" placeholder="编号" name="uid">
-              </div>
-              <div class="form-group">
-                <label for="identity">身份证号</label>
-                <input class="form-control" id="identity" placeholder="身份证号" name="Indentity">
-              </div>
-              <div class="form-group">
-                <label for="nation">民族</label>
-                <input class="form-control" id="nation" placeholder="民族" name="Nation">
-              </div>
-              <div class="form-group">
-                <label for="address">地址</label>
-                <input class="form-control" id="address" placeholder="地址" name="Address">
-              </div>
-              <div class="form-group">
-                <label for="phone">电话</label>
-                <input class="form-control" id="phone" placeholder="电话" name="Phone">
-              </div>
-              <div class="form-group">
-                <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="radio" id="sex1" name="Sex" value="male" checked>
-                  <label class="form-check-label" for="sex1">男</label>
-                </div>
-                <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="radio" id="sex2" name="Sex" value="female">
-                  <label class="form-check-label" for="sex2">女</label>
-                </div>
-              </div>
-              <div class="form-group" >
-                <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="radio" name="Authority" id="c-student" value="1">
-                  <label class="form-check-label" for="c-student">学生</label>
-                </div>
-                <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="radio" name="Authority" id="c-teacher" value="2" checked>
-                  <label class="form-check-label" for="c-teacher">老师</label>
-                </div>
-                <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="radio" name="Authority" id="c-admin" value="3" disabled>
-                  <label class="form-check-label" for="c-admin">管理员</label>
-                </div>
-              </div>
-              <div class="form-row" id="student">
-                <div class="form-group col-md-3">
-                  <label for="academy">学院</label>
-                  <select id="academy" class="form-control" name="Academy">
-                    <option>计算机</option>
-                    <option>软件</option>
-                  </select>
-                </div>
-                <div class="form-group col-md-3 offset-1">
-                  <label for="major">专业</label>
-                  <select id="major" class="form-control" name="Major">
-                    <option>计算机</option>
-                    <option>软件</option>
-                  </select>
-                </div>
-                <div class="form-group col-md-3 offset-1">
-                  <label for="banji">班级</label>
-                  <select id="banji" class="form-control" name="Banji">
-                    <option value="1737101">1737101</option>
-                    <option value="1737102">1737102</option>
-                    <option value="1737103">1737103</option>
-                  </select>
-                </div>
-              </div>
-              <div class="form-group">
-                <button type="button" class="btn btn-primary" onclick="adduser()">保存</button>
-              </div>
-            </form>
+          <div class="card-body">
+            <div class="table-responsive">
+              <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <thead>
+                <tr>
+                  <th>申诉人</th>
+                  <th>申诉内容简述</th>
+                  <th>审核教师</th>
+                  <th>申诉时间</th>
+                  <th>申诉状态</th>
+                  <th>申诉处理</th>
+                </tr>
+                </thead>
+                <tfoot>
+                <tr>
+                  <th>Name</th>
+                  <th>Position</th>
+                  <th>Age</th>
+                  <th>Start date</th>
+                  <th>Salary</th>
+                  <th>
+                  </th>
+                </tr>
+                </tfoot>
+                <tbody>
+                <tr>
+                  <td>1</td>
+                  <td>System Architect</td>
+                  <td>61</td>
+                  <td>2011/04/25</td>
+                  <td>$320,800</td>
+                  <th>
+                    <button class="btn btn-default"  data-toggle="modal" data-target="#change-Modal">
+                      <i class="fa fa-pen" aria-hidden="true"></i>
+                    </button>
+                    <button class="btn btn-default" >
+                        <i class="fa fa-trash" aria-hidden="true"></i>
+                    </button>
+                  </th>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>Accountant</td>
+                  <td>63</td>
+                  <td>2011/07/25</td>
+                  <td>$170,750</td>
+                  <th>
+                    <button class="btn btn-default"  data-toggle="modal" data-target="#change-Modal">
+                      <i class="fa fa-pen" aria-hidden="true"></i>
+                    </button>
+                    <button class="btn btn-default" >
+                      <i class="fa fa-trash" aria-hidden="true"></i>
+                    </button>
+                  </th>
+                </tr>
+                <tr>
+                  <td>3</td>
+                  <td>Junior Technical Author</td>
+                  <td>66</td>
+                  <td>2009/01/12</td>
+                  <td>$86,000</td>
+                  <th>
+                    <button class="btn btn-default"  data-toggle="modal" data-target="#change-Modal">
+                      <i class="fa fa-pen" aria-hidden="true"></i>
+                    </button>
+                    <button class="btn btn-default" >
+                      <i class="fa fa-trash" aria-hidden="true"></i>
+                    </button>
+                  </th>
+                </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
 
@@ -429,20 +424,48 @@
   <i class="fas fa-angle-up"></i>
 </a>
 
-<!-- Logout Modal-->
-<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<script src="js/jquery-3.2.1.js"></script>
+
+<!-- 更改信息模态框 -->
+<div class="modal fade" id="change-Modal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">×</span>
+        <h5 class="modal-title" id="ModalLabel">申诉审核</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+      <div class="modal-body">
+        <form>
+          <div class="form-group">
+            <label for="InputTitle">申诉人</label>
+            <input class="form-control" id="InputTitle">
+          </div>
+          <div class="form-group">
+            <label for="InputTextarea">申诉内容</label>
+            <textarea class="form-control" id="InputTextarea" rows="3"></textarea>
+          </div>
+          <div class="form-group">
+            <label for="InputPerson">成绩修改</label>
+            <input class="form-control" id="InputPerson">
+          </div>
+          <div class="form-group col-md-4">
+            <label for="inputState">审核教师</label>
+            <select id="inputState" class="form-control">
+              <option selected>选择教师</option>
+              <option>王小</option>
+              <option>王大</option>
+              <option>王二</option>
+            </select>
+          </div>
+          <div style="padding-left: 255px">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </form>
+      </div>
       <div class="modal-footer">
-        <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-        <a class="btn btn-primary" href="login.html">Logout</a>
       </div>
     </div>
   </div>
@@ -452,9 +475,19 @@
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+<!-- Core plugin JavaScript-->
+<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
 <!-- Custom scripts for all pages-->
 <script src="js/sb-admin-2.min.js"></script>
-<script src="js/admin.js"></script>
+
+<!-- Page level plugins -->
+<script src="vendor/datatables/jquery.dataTables.min.js"></script>
+<script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
+
+<!-- Page level custom scripts -->
+<script src="js/demo/datatables-demo.js"></script>
+
 </body>
 
 </html>
