--- a/src/main/webapp/examination_score.html
+++ b/src/main/webapp/examination_score.html
@@ -9,14 +9,17 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>SB Admin 2 - Charts</title>
+  <title>SB Admin 2 - Tables</title>
 
-  <!-- Custom fonts for this template-->
+  <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
-  <!-- Custom styles for this template-->
+  <!-- Custom styles for this template -->
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
+
+  <!-- Custom styles for this page -->
+  <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
 
 </head>
 
@@ -310,95 +313,60 @@
       <div class="container-fluid">
 
         <!-- Page Heading -->
-        <h1 class="h3 mb-2 text-gray-800">新增用户</h1>
-        <div class="row">
-          <div class="col-md-2">
-            <img src="img/doge.jpg" style="max-height: 90%;max-width: 90%">
-            <a href="#" >头像上传</a>
+        <h1 class="h3 mb-2 text-gray-800" style="padding-bottom: 80px">考试成绩管理</h1>
+        <!-- DataTales Example -->
+        <div class="card shadow mb-4">
+          <div class="card-header py-3">
+            <div class="row">
+              <h6 class="m-0 font-weight-bold text-primary col-md-10">成绩详情</h6>
+            </div>
           </div>
-          <div class="col-md-8">
-            <form id="user-info">
-              <div class="form-group">
-                <label for="name">姓名</label>
-                <input class="form-control" id="name" placeholder="姓名" name="Name">
-              </div>
-              <div class="form-group">
-                <label for="InputEmail1">邮箱</label>
-                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="邮箱" name="Email">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-              </div>
-              <div class="form-group">
-                <label for="uid">编号</label>
-                <input class="form-control" id="uid" placeholder="编号" name="uid">
-              </div>
-              <div class="form-group">
-                <label for="identity">身份证号</label>
-                <input class="form-control" id="identity" placeholder="身份证号" name="Indentity">
-              </div>
-              <div class="form-group">
-                <label for="nation">民族</label>
-                <input class="form-control" id="nation" placeholder="民族" name="Nation">
-              </div>
-              <div class="form-group">
-                <label for="address">地址</label>
-                <input class="form-control" id="address" placeholder="地址" name="Address">
-              </div>
-              <div class="form-group">
-                <label for="phone">电话</label>
-                <input class="form-control" id="phone" placeholder="电话" name="Phone">
-              </div>
-              <div class="form-group">
-                <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="radio" id="sex1" name="Sex" value="male" checked>
-                  <label class="form-check-label" for="sex1">男</label>
-                </div>
-                <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="radio" id="sex2" name="Sex" value="female">
-                  <label class="form-check-label" for="sex2">女</label>
-                </div>
-              </div>
-              <div class="form-group" >
-                <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="radio" name="Authority" id="c-student" value="1">
-                  <label class="form-check-label" for="c-student">学生</label>
-                </div>
-                <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="radio" name="Authority" id="c-teacher" value="2" checked>
-                  <label class="form-check-label" for="c-teacher">老师</label>
-                </div>
-                <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="radio" name="Authority" id="c-admin" value="3" disabled>
-                  <label class="form-check-label" for="c-admin">管理员</label>
-                </div>
-              </div>
-              <div class="form-row" id="student">
-                <div class="form-group col-md-3">
-                  <label for="academy">学院</label>
-                  <select id="academy" class="form-control" name="Academy">
-                    <option>计算机</option>
-                    <option>软件</option>
-                  </select>
-                </div>
-                <div class="form-group col-md-3 offset-1">
-                  <label for="major">专业</label>
-                  <select id="major" class="form-control" name="Major">
-                    <option>计算机</option>
-                    <option>软件</option>
-                  </select>
-                </div>
-                <div class="form-group col-md-3 offset-1">
-                  <label for="banji">班级</label>
-                  <select id="banji" class="form-control" name="Banji">
-                    <option value="1737101">1737101</option>
-                    <option value="1737102">1737102</option>
-                    <option value="1737103">1737103</option>
-                  </select>
-                </div>
-              </div>
-              <div class="form-group">
-                <button type="button" class="btn btn-primary" onclick="adduser()">保存</button>
-              </div>
-            </form>
+          <div class="card-body">
+            <div class="table-responsive">
+              <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <thead>
+                <tr>
+                  <th>学生姓名</th>
+                  <th>课程名称</th>
+                  <th>授课教师</th>
+                  <th>课程成绩</th>
+                  <th>申诉状态</th>
+                </tr>
+                </thead>
+                <tfoot>
+                <tr>
+                  <th>Name</th>
+                  <th>Position</th>
+                  <th>Office</th>
+                  <th>Age</th>
+                  <th>Start date</th>
+                </tr>
+                </tfoot>
+                <tbody>
+                <tr>
+                  <td>1</td>
+                  <td>System Architect</td>
+                  <td>Edinburgh</td>
+                  <td>61</td>
+                  <td>2011/04/25</td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>Accountant</td>
+                  <td>Tokyo</td>
+                  <td>63</td>
+                  <td>2011/07/25</td>
+                </tr>
+                <tr>
+                  <td>3</td>
+                  <td>Junior Technical Author</td>
+                  <td>San Francisco</td>
+                  <td>66</td>
+                  <td>2009/01/12</td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
 
@@ -429,32 +397,24 @@
   <i class="fas fa-angle-up"></i>
 </a>
 
-<!-- Logout Modal-->
-<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">×</span>
-        </button>
-      </div>
-      <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-      <div class="modal-footer">
-        <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-        <a class="btn btn-primary" href="login.html">Logout</a>
-      </div>
-    </div>
-  </div>
-</div>
-
+<script src="js/jquery-3.2.1.js"></script>
 <!-- Bootstrap core JavaScript-->
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+<!-- Core plugin JavaScript-->
+<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
 <!-- Custom scripts for all pages-->
 <script src="js/sb-admin-2.min.js"></script>
-<script src="js/admin.js"></script>
+
+<!-- Page level plugins -->
+<script src="vendor/datatables/jquery.dataTables.min.js"></script>
+<script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
+
+<!-- Page level custom scripts -->
+<script src="js/demo/datatables-demo.js"></script>
+
 </body>
 
 </html>
